--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -14,6 +14,11 @@ pic8259 = "0.10.1"
 pc-keyboard = "0.5.0"
 elf = { version = "0.7.0", default-features = false }
 
+[dependencies.object]
+version = "0.29.0"
+default-features = false
+features = ["elf", "read_core"]
+
 [dependencies.crossbeam-queue]
 version = "0.2.1"
 default-features = false
@@ -32,6 +37,7 @@ features = ["alloc"]
 test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio"]
 test-success-exit-code = 33
 test-timeout = 60
+run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}"]
 
 
 [[test]]
