--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -33,11 +33,13 @@ version = "0.3.4"
 default-features = false
 features = ["alloc"]
 
+[package.metadata.bootloader]
+
 [package.metadata.bootimage]
 test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio"]
 test-success-exit-code = 33
 test-timeout = 60
-run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}"]
+run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}", "-s", "-S"]
 
 
 [[test]]
