--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -3,6 +3,9 @@ name = "zulu_os"
 version = "0.1.0"
 edition = "2021"
 
+[profile.release]
+debug = true
+
 [dependencies]
 bootloader = { version = "0.9.8", features = ["map_physical_memory"]}
 volatile = "0.2.6"
@@ -12,7 +15,7 @@ x86_64 = "0.14.2"
 uart_16550 = "0.2.0"
 pic8259 = "0.10.1"
 pc-keyboard = "0.5.0"
-elf = { version = "0.7.0", default-features = false }
+num_enum = { version = "0.5.7", default-features = false }
 
 [dependencies.object]
 version = "0.29.0"
@@ -40,6 +43,7 @@ test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "st
 test-success-exit-code = 33
 test-timeout = 60
 run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}", "-s", "-S"]
+#run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}"]
 
 
 [[test]]
