--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -42,9 +42,8 @@ features = ["alloc"]
 test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio"]
 test-success-exit-code = 33
 test-timeout = 60
-#run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}", "-s", "-S"]
-run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}"]
-
+run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}", "-s", "-S"]
+#run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}"]
 
 [[test]]
 name = "stack_overflow"
