--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -16,6 +16,7 @@ uart_16550 = "0.2.0"
 pic8259 = "0.10.1"
 pc-keyboard = "0.5.0"
 num_enum = { version = "0.5.7", default-features = false }
+raw-cpuid = "10.6.0"
 
 [dependencies.object]
 version = "0.29.0"
@@ -42,7 +43,7 @@ features = ["alloc"]
 test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio"]
 test-success-exit-code = 33
 test-timeout = 60
-run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}", "-s", "-S"]
+run-command = ["qemu-system-x86_64", "-cpu", "Haswell-v1,+fsgsbase", "-drive", "format=raw,file={}", "-s", "-S"]
 #run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}"]
 
 [[test]]
