--- a/syscall/Cargo.toml
+++ b/syscall/Cargo.toml
@@ -3,6 +3,5 @@ name = "syscall"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+num_enum = { version = "0.5.7", default-features = false }
