--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -45,8 +45,8 @@ features = ["alloc"]
 test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio"]
 test-success-exit-code = 33
 test-timeout = 60
-run-command = ["qemu-system-x86_64", "-cpu", "Haswell-v1,+fsgsbase", "-drive", "format=raw,file={}", "-s", "-S"]
-#run-command = ["qemu-system-x86_64", "-cpu", "Haswell-v1,+fsgsbase", "-drive", "format=raw,file={}"]
+#run-command = ["qemu-system-x86_64", "-cpu", "Haswell-v1,+fsgsbase", "-drive", "format=raw,file={}", "-s", "-S"]
+run-command = ["qemu-system-x86_64", "-cpu", "Haswell-v1,+fsgsbase", "-drive", "format=raw,file={}"]
 
 [[test]]
 name = "stack_overflow"
@@ -54,8 +54,4 @@ harness = false
 
 [[test]]
 name = "should_panic"
-harness = false
-
-[[test]]
-name = "debug_breakpoint"
 harness = false
