--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -7,7 +7,6 @@ edition = "2021"
 debug = true
 
 [dependencies]
-bootloader = { version = "0.9.8", features = ["map_physical_memory"]}
 volatile = "0.2.6"
 lazy_static = { version = "1.0", features = ["spin_no_std"] }
 spin = "0.5.2"
@@ -19,6 +18,7 @@ num_enum = { version = "0.5.7", default-features = false }
 raw-cpuid = "10.6.0"
 memoffset = { version = "0.7.1", features = ["unstable_const"] }
 syscall = { path = "../syscall/" }
+bootloader_api = "0.11.3"
 
 [dependencies.object]
 version = "0.29.0"
