--- a/kernel/.cargo/config.toml
+++ b/kernel/.cargo/config.toml
@@ -8,12 +8,8 @@ rustflags = ["-C", "link-args=/ENTRY:_start /SUBSYSTEM:console"]
 [target.'cfg(target_os = "macos")']
 rustflags = ["-C", "link-args=-e __start -static -nostartfiles"]
 
-[unstable]
-build-std = ["core", "compiler_builtins", "alloc"]
-build-std-features = ["compiler-builtins-mem"]
-
 [build]
-target = "x86_64.json"
+target = "x86_64-unknown-none"
 
 [target.'cfg(target_os = "none")']
 runner = "bootimage runner"
