--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 debug = true
 
 [dependencies]
-bootloader = { version = "0.9.8", features = ["map_physical_memory"]}
+bootloader_api = "0.11"
 volatile = "0.2.6"
 lazy_static = { version = "1.0", features = ["spin_no_std"] }
 spin = "0.5.2"
